--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta
+            name="description"
+            content="PC Bulder - all you need to build your dream computer..."
+        />
+        <meta
+            name="keywords"
+            content="PC Builder, computer, computer parts, processors, graphics card, ram, motherboard"
+        />
+
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -17,7 +25,6 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
             rel="stylesheet"
         />
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>React App</title>
+        <title>PC Builder</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
